// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WorkoutLog /> should display a modal on "Add Exercise" click 1`] = `
<div
  className="workout-log-container"
>
  <div
    className="exercise-logger"
  >
    <JournalHeader />
    <div
      className="workout-log"
    >
      <div>
        <LoggedExercises
          loggedExercises={
            Array [
              Object {
                "exerciseName": "Squat",
                "reps": 8,
                "sets": 3,
                "weight": 135,
              },
            ]
          }
        />
        <button
          className="add-exercise-btn"
          onClick={[Function]}
        >
          Add Exercise
        </button>
        <Modal
          ariaHideApp={true}
          bodyOpenClassName="ReactModal__Body--open"
          className="modal-content"
          closeTimeoutMS={0}
          isOpen={true}
          onRequestClose={[Function]}
          overlayClassName="modal-overlay"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
        >
          <ExerciseLogger
            hideModal={[Function]}
          />
        </Modal>
      </div>
    </div>
  </div>
</div>
`;

exports[`<WorkoutLog /> should render LogNewExercise when there are no exercises 1`] = `
<div
  className="workout-log-container"
>
  <div
    className="exercise-logger"
  >
    <JournalHeader />
    <div
      className="workout-log"
    >
      <LogNewExercise
        ExerciseLoggerModal={
          <Modal
            ariaHideApp={true}
            bodyOpenClassName="ReactModal__Body--open"
            className="modal-content"
            closeTimeoutMS={0}
            isOpen={false}
            onRequestClose={[Function]}
            overlayClassName="modal-overlay"
            parentSelector={[Function]}
            portalClassName="ReactModalPortal"
            role="dialog"
            shouldCloseOnEsc={true}
            shouldCloseOnOverlayClick={true}
            shouldFocusAfterRender={true}
            shouldReturnFocusAfterClose={true}
          >
            <ExerciseLogger
              hideModal={[Function]}
            />
          </Modal>
        }
        displayModal={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<WorkoutLog /> should render an exercise table when exercises exist 1`] = `
<div
  className="workout-log-container"
>
  <div
    className="exercise-logger"
  >
    <JournalHeader />
    <div
      className="workout-log"
    >
      <div>
        <LoggedExercises
          loggedExercises={
            Array [
              Object {
                "exerciseName": "Squat",
                "reps": 8,
                "sets": 3,
                "weight": 135,
              },
            ]
          }
        />
        <button
          className="add-exercise-btn"
          onClick={[Function]}
        >
          Add Exercise
        </button>
        <Modal
          ariaHideApp={true}
          bodyOpenClassName="ReactModal__Body--open"
          className="modal-content"
          closeTimeoutMS={0}
          isOpen={false}
          onRequestClose={[Function]}
          overlayClassName="modal-overlay"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
        >
          <ExerciseLogger
            hideModal={[Function]}
          />
        </Modal>
      </div>
    </div>
  </div>
</div>
`;
